[project]
name = "image-processing-100knock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "opencv-python>=4.11.0.86",
]

[dependency-groups]
dev = [
    "ipython>=8.32.0",
    "jupyter>=1.1.1",
    "ruff>=0.9.4",
]
